[project]
name = "winter2026assignments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.4",
    "pandas>=2.3.3",
    "requests>=2.31.0",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "scikit-image>=0.25.2",
    "torch>=2.9.1",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "pre-commit>=4.0.0",
    "nbstripout>=0.8.2",
    "torchvision>=0.24.1",
    "torch-geometric>=2.7.0",
    "networkx>=3.4.2",
    "mnist1d>=0.0.2",
    "datasets>=3.2.0",
    "transformers>=4.47.1",
    "tqdm>=4.67.1",
    "astropy>=7.0.0",
    "nltk>=3.9.1",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "sympy>=1.13.0",
    "pygam>=0.9.1",
    "plotly>=5.24.0",
    "graphviz>=0.20.0",
    "scanpy>=1.10.0",
    "codegrade>=17.0.23",
    "typer>=0.21.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "LOG",    # flake8-logging
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
]

ignore = [
    "T201",   # print statements OK for notebooks
    "S101",   # assert statements OK for tests
    "PLR2004", # magic values OK in educational code
    "ERA001", # commented code OK for educational purposes
    "COM812", # conflicts with ruff formatter
    "ISC001", # conflicts with ruff formatter
    "RET505", # elif after return OK for pedagogical clarity
    "UP032",  # .format() OK when teaching string formatting
    "PLR0402", # import torch.nn as nn is standard PyTorch convention
    "N812",   # import torch.nn.functional as F is standard PyTorch convention
]

[tool.ruff.lint.per-file-ignores]
"make_student_version.py" = [
    "C901",    # CLI commands have inherent complexity
    "PLR0912", # CLI commands have many branches for validation output
    "S603",    # subprocess with hardcoded commands is fine
    "S607",    # partial executable path is fine for internal tools
    "FBT001",  # Typer CLI requires boolean positional args
    "FBT002",  # Typer CLI requires boolean defaults
]
"*.ipynb" = [
    "F821",    # undefined names expected (cross-cell references)
    "F811",    # redefinitions expected (teaching same concept multiple ways)
    "PT018",   # compound assertions OK for concise hidden tests
    "PLR0913", # neural net functions need many parameters
    "PLW2901", # loop variable reassignment (e.g., images = images.to(device)) is idiomatic PyTorch
    "E703",    # trailing semicolons used to suppress Jupyter output
    "S311",    # standard random OK for educational ML code
    "FBT002",  # boolean default args OK in educational code
    "TRY003",  # long exception messages OK for clarity
    "EM102",   # f-string exceptions OK for clarity
    "SIM108",  # if-else blocks OK for pedagogical clarity
    "INP001",  # notebooks don't need __init__.py
    "B905",    # zip() without strict OK for educational code
    "COM818",  # trailing commas OK in notebooks
    "N806",    # B, C, H, W are standard ML tensor dimension names
]
"datasci315/homework1/*.ipynb" = [
    "PERF401", # teaching loops before comprehensions
    "PLR0133", # teaching type coercion behavior
    "SIM118",  # explicit .keys() for teaching dict iteration
    "RUF015",  # slice readability over next(iter(...))
    "FBT002",  # teaching function default arguments
    "Q000",    # single quotes OK when teaching string syntax
]
"datasci315/homework2/*.ipynb" = [
    "SIM102",  # nested ifs for pedagogical clarity
    "SIM103",  # explicit if/return for pedagogical clarity
]
"datasci315/homework3/*.ipynb" = [
    "N803",    # X is standard ML convention for data matrices
    "N806",    # X_augmented etc. follow ML naming conventions
]
"datasci503/groupwork4/*.ipynb" = [
    "N803",    # X is standard ML convention for data matrices
    "N817",    # LDA, QDA are standard sklearn import aliases
]
"datasci503/groupwork2/*.ipynb" = [
    "FBT003",  # Boolean positional values OK in plotting calls
    "B007",    # Unused loop variable OK in repeated training loops
    "N816",    # true_Y naming OK in educational context
    "PERF401", # teaching explicit loops before list comprehensions
    "C408",    # dict() call OK for readability in animation code
    "E501",    # long lines OK in complex formatting strings
    "E402",    # imports not at top OK for incremental cell execution
]
"datasci503/groupwork5/*.ipynb" = [
    "N802",    # KFoldCV etc. use pedagogical function naming
    "N803",    # X, K are standard ML convention names
]
"datasci503/groupwork6/*.ipynb" = [
    "N803",    # X is standard ML convention for data matrices
    "PERF401", # teaching explicit loops before list comprehensions
]
"datasci503/homework1/*.ipynb" = [
    "PERF401", # teaching loops before comprehensions
]
"datasci315/groupwork6/*.ipynb" = [
    "ARG001",  # unused function args OK in student templates
    "S310",    # urlretrieve OK for downloading dataset
]
"datasci315/groupwork12/stgat_traffic_prediction/**/*.py" = [
    "F403",    # star imports OK in reference implementation
    "F405",    # undefined from star imports OK
    "N801",    # ST_GAT is standard model name from paper
    "N802",    # MAPE, RMSE, MAE are standard ML metric names
    "N803",    # W is standard notation for weight matrix
    "N806",    # W, W2 etc. follow paper notation
    "FBT002",  # boolean defaults OK in reference code
    "E501",    # long lines OK in reference code
    "PTH118",  # os.path OK in reference code
    "PTH123",  # open() OK in reference code
    "PLW2901", # loop var overwriting OK in reference code
    "PLR0913", # many args OK in reference code
    "ARG001",  # unused args OK in reference code
    "A001",    # shadowing builtins OK in reference code
    "A002",    # shadowing builtins OK in reference code
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
